# contract-dependency-manager

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY_DOC.md  LICENSE  Makefile  README.md  _DEPLOY_DOC.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.ts  vitest.e2e.config.ts
.cargo/: config.toml
.changeset/: account-management.md  add-set-defaults.md  add-txopts-value-gas-storage.md  add-w3s-environment.md  add-w3s-registry-address.md  bright-pears-join.md  bright-pens-glow.md  browser-compatible-cdm.md  browser-entry-point.md  bulletin-expired-indicator.md  bump-all-packages.md  bump-cli.md  bump-product-sdk.md  bump-release.md  cargo-feature-support.md  clean-registry-defaults.md  cli-patch-release.md  config.json  create2-universal-registry.md  devnet-ipfs-gateway.md  devnet-preset.md  direct-bulletin-metadata-store.md  docker-release-fix.md  dryrun-read-at-best.md  fix-cdm-defaults.md  fix-common-crate-docs.md  fix-esm-compat.md  fix-install-missing-contract.md  fix-install-query-origin.md  fix-json-target-spec.md  fix-link-display-no-osc8.md  fix-txopts-origin-dry-run.md  fix-ws-provider-import.md  four-searching-registries.md  fresh-salts-redeploy.md  frontend-product-sdk.md  hyperlink-fallback.md  improve-templates.md  initial-release.md  install-tui-refactor.md  (+32 more)
.github/workflows/: ci.yml  deploy-frontend.yml  dev-release.yml  docker.yml  dotns-deploy.yml  format.yml  release.yml
.papi/: polkadot-api.json
.papi/contracts/: contractsRegistry.json  counter.json  counterWriter.json
.papi/descriptors/: generated.json  package.json
.papi/metadata/: assetHub.scale  assethub.scale  bulletin.scale
contracts/registry/: Cargo.toml  lib.rs
docker/: cdm.Dockerfile
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
frontend/src/components/: Footer.css  Footer.tsx  Header.css  Header.tsx  Layout.tsx  NetworkConfig.css  NetworkConfig.tsx  PackageCard.css  PackageCard.tsx
frontend/src/context/: NetworkContext.tsx
frontend/src/data/: packages.ts  types.ts
frontend/src/hooks/: useRegistry.ts
frontend/src/pages/: HomePage.css  HomePage.tsx  PackagePage.css  PackagePage.tsx  SearchPage.css  SearchPage.tsx
frontend/src/styles/: global.css
scripts/: deploy-registry.ts  deploy.sh  embed-templates.ts  setup.sh  verify-cid.ts
specs/: cdm-system.md
specs/migration-guides/2026-06-02/: playground-app.md  playground-cli.md  rock-paper-scissors.md
specs/migrations-guides/: 2026-05-27.md
specs/proposals/: cdm-test-helpers.md  ppn-inject-cdm-registry.md
src/: cli.ts  constants.ts
src/apps/cli/: CHANGELOG.md  package.json  tsconfig.json
src/apps/cli/scripts/: deploy-registry.ts  embed-templates.ts  verify-cid.ts
src/apps/cli/src/: cli.ts  constants.ts
src/apps/cli/tests/: commands.test.ts  detection.test.ts  e2e.test.ts  pipeline.test.ts  toolchain.test.ts
src/apps/frontend/: package.json  tsconfig.app.json  vite.config.ts
src/apps/frontend/assets/: icon.icns
src/apps/frontend/public/: install
src/apps/frontend/src/: App.tsx  index.css
src/commands/: add.ts  build.ts  deploy.ts  install.ts  template.ts
src/contract/: Cargo.toml
src/contract/src/: lib.rs
src/contracts/cdm-root/: Cargo.toml  lib.rs
src/contracts/registry/: Cargo.toml
src/lib/: connection.ts  deployer.ts  detection.ts  known_chains.ts  pipeline.ts  publisher.ts  registry.ts  ui.ts  utils.ts
src/lib/cdm/import-test/: Cargo.toml  cdm.json  lib.rs
src/lib/cdm/import-test/.cargo/: config.toml
src/lib/cdm/import-test/fixtures/.cdm/test/contracts/@test/sample/1/: abi.json
src/lib/cdm/rust-macros/pvm-cdm/: Cargo.toml
src/lib/cdm/rust-macros/pvm-cdm-macros/: Cargo.toml
src/lib/cdm/rust-macros/pvm-cdm-macros/src/: lib.rs
src/lib/cdm/rust-macros/pvm-cdm/src/: lib.rs
src/lib/cdm/rust-macros/pvm-cdm/tests/: reference_shape.rs
src/lib/components/: DeployTable.tsx
src/lib/contracts/: CHANGELOG.md  package.json  tsconfig.json
src/lib/descriptors/: CHANGELOG.md  package.json
src/lib/env/: CHANGELOG.md  package.json
src/lib/scripts/: deploy-frontend.sh  deploy-registry.ts  embed-templates.ts  package.json  run-registry-e2e.sh  smoke-foreign-contracts.ts  test-registry-roundtrip.ts  tsconfig.json
src/lib/utils/: CHANGELOG.md  package.json  tsconfig.json
src/migrations/: CHANGELOG.md  README.md  export.ts  import.ts  package.json  registry.ts  tsconfig.json  types.ts
src/templates/common/: .gitignore  CLAUDE.md
src/templates/foundry-counter/: .gitignore  README.md  foundry.toml  package.json  setup.sh
src/templates/guide/: Cargo.toml  README.md  package.json  tsconfig.json
src/templates/guide/.cargo/: config.toml
src/templates/guide/contracts/app-api/: Cargo.toml  README.md  lib.rs
src/templates/guide/contracts/support-contract/: Cargo.toml  lib.rs
src/templates/guide/src/: index.ts
src/templates/hardhat-counter/: .gitignore  README.md  hardhat.config.ts  package.json  setup.sh
src/templates/instagram/: CLAUDE.md  README.md  cdm.json  index.html  package.json  setup.sh  tsconfig.app.json  tsconfig.node.json
src/templates/instagram/contracts/instagram/: Cargo.toml  README.md  lib.rs
src/templates/shared-counter/: .gitignore  Cargo.toml  README.md  cdm.json  package.json  vitest.config.ts
src/templates/shared-counter/.cargo/: config.toml
src/templates/shared-counter/contracts/counter/: Cargo.toml  README.md  lib.rs
src/templates/shared-counter/contracts/counter-reader/: Cargo.toml  lib.rs
src/templates/shared-counter/contracts/counter-writer/: Cargo.toml  lib.rs
src/templates/shared-counter/src/: index.ts
src/templates/shared-counter/tests/: counter.test.ts
src/templates/shared-counter/ts/: tsconfig.json
src/templates/shared-counter/ts/src/: validate.ts
templates/shared-counter/: Cargo.toml
templates/shared-counter/contracts/counter-reader/: Cargo.toml  lib.rs
templates/shared-counter/ts/: package.json
tests/: commands.test.ts  detection.test.ts  e2e.test.ts  pipeline.test.ts
(+158 files in other folders)
