[workspace]
resolver = "2"
members = ["src/contract", "src/lib/cdm/rust"]

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies"]
edition = "2024"

[workspace.dependencies]
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
polkavm-derive = "0.31"
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
picoalloc = "5.2"
cdm = { path = "src/lib/cdm/rust" }
