[package]
name = "contract-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
polkavm-derive = "0.31"
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
picoalloc = "5.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "contract-registry"
path = "src/lib.rs"
