[package]
name = "contract-registry"
version.workspace = true
edition.workspace = true

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive.workspace = true
picoalloc.workspace = true

[dev-dependencies]
pvm-contract-sdk = { workspace = true, features = ["std"] }

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "contract-registry"
path = "src/lib.rs"
