[package]
name = "cdm-root"
version.workspace = true
edition.workspace = true

[dependencies]
# This bootstrap contract intentionally uses the same legacy SDK branch as
# `contract-registry` while the registry itself is still on that implementation.
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
polkavm-derive.workspace = true
picoalloc.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "cdm-root"
path = "lib.rs"
