[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["CDM Example"]
homepage = "https://polkadot.com/"
edition = "2024"

[workspace.dependencies]
cdm = { path = "../../lib/cdm/rust" }
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "sm/cdm", features = ["alloc"] }
pvm-cdm = { path = "../../lib/cdm/rust-macros/pvm-cdm" }
polkavm-derive = "0.31"
picoalloc = "5.2"
