[package]
name = "cdm-import-test"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cdm-import-test"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[dependencies]
cdm = { workspace = true }
pvm-contract-sdk = { workspace = true }
pvm-cdm = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
