[package]
name = "pvm-cdm-macros"
description = "Proc-macros for the pvm-cdm consumer-side integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote = "1.0"
proc-macro2 = "1.0"
keccak-const.workspace = true
