[package]
name = "pvm-cdm"
description = "Contract Dependency Manager integration for cargo-pvm-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pvm-cdm-macros = { path = "../pvm-cdm-macros" }

[dev-dependencies]
pvm-contract-sdk.workspace = true
