[package]
name = "app-api"
version.workspace = true
edition.workspace = true
description = "Shared counter contract that holds on-chain state, exposing increment and read methods via CDM"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "app-api"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm-package]
name = "@example/app-api"

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
