[package]
name = "support_contract"
version.workspace = true
edition.workspace = true
description = "Reads the current count from the app-api contract via cross-contract CDM reference"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "support_contract"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
name = "@example/support-contract"

[dependencies]
cdm = { workspace = true }
pvm-contract-sdk = { workspace = true }
pvm-cdm = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
# Build/deploy ordering only — source consumes `app-api` via `cdm::import!`.
app-api = { path = "../app-api" }