[package]
name = "instagram"
version.workspace = true
edition.workspace = true
description = "Minimal on-chain Instagram — posts indexed by (user, index)"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "instagram"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm-package]
name = "@example/instagram"

[dependencies]
pvm-contract-sdk = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
