[package]
name = "counter_reader"
version.workspace = true
edition.workspace = true
description = "Reads the current count from the shared counter contract via cross-contract CDM reference"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "counter_reader"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@example/counter-reader"
dependencies = ["@example/counter"]

[dependencies]
cdm = { workspace = true }
pvm-contract-sdk = { workspace = true }
pvm-cdm = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
