[package]
name = "counter_writer"
version.workspace = true
edition.workspace = true
description = "Increments the shared counter contract via cross-contract CDM reference"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "counter_writer"
path = "lib.rs"

[features]
abi-gen = ["pvm-contract-sdk/abi-gen"]

[package.metadata.cdm]
package = "@example/counter-writer"

[dependencies]
cdm = { workspace = true }
pvm-contract-sdk = { workspace = true }
pvm-cdm = { workspace = true }
polkavm-derive = { workspace = true }
picoalloc = { workspace = true }
# Build/deploy ordering only — source consumes `counter` via `cdm::import!`.
counter = { path = "../counter" }
